hphp/test/zend/good/Zend/tests/objects_029.php.expectf

Fatal error: Invalid static property access: foo::f in %s/objects_029.php on line 11
